# premium-bonds

./: GEMINI.md  README.md  package-lock.json  package.json  tsconfig.json
.agents/skills/: solana_expert_architect.md
.agents/skills/kamino-docs/: skill.md
.gemini/: dashboard.html
anchor/: Anchor.toml
anchor/programs/anchor/: Cargo.toml
anchor/programs/anchor/src/: constants.rs  error.rs  kamino.rs  lib.rs  state.rs  utils.rs
anchor/programs/anchor/src/instructions/: mod.rs
anchor/programs/anchor/tests/: integration.rs  test_buy_bonds.rs  test_claim_prize.rs  test_create_pool.rs  test_discriminator.rs  test_harvest_yield_and_commit.rs  test_initialize.rs  test_initialize_global.rs  test_kamino_contract.rs  test_reinvest_winnings.rs  test_reveal_and_pick_winners.rs  test_sell_bonds.rs  test_set_auto_reinvest.rs  test_set_prize_tiers.rs  test_update_global_config.rs  test_update_pool_config.rs
anchor/programs/mock-kamino/: Cargo.toml
anchor/programs/mock-kamino/src/: lib.rs
app/: globals.css  layout.tsx  mock-data.ts  page.tsx  types.ts
app/components/: ConnectWalletButton.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx  StatsSection.tsx
app/components/dashboard/: CountdownTimer.tsx  DashboardHeader.tsx  DashboardSidebar.tsx  DepositModal.tsx  PoolCard.tsx  PortfolioSummary.tsx  RecentWinnersTicker.tsx  UnclaimedBanner.tsx  WithdrawModal.tsx
app/components/portfolio/: ActivityFeed.tsx  PortfolioHeroRow.tsx  PrizeHistoryLedger.tsx
app/dashboard/: layout.tsx  page.tsx
(+21 files in other folders)
