[package]
name = "mock-kamino"
version = "0.1.0"
description = "Test-only mock of Kamino Lending (KLend) for CPI integration tests"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_kamino"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"
solana-program = "^3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
